--- a/navbar.css
+++ b/navbar.css
@@ -24,7 +24,7 @@ body {
 }
 
 .img-responsive img{
-  max-width:30%;
+  width:400px;
   display: block;
   margin-left: auto;
   margin-right: auto;
